# deposit-service

./: .gitignore  DEPLOYMENT.md  README.md  analyze-bridge-status.js  check-vara-program.js  check-vara-tx.js  query-vara-program.js  test-complete-flow.js  test-direct-message.js  test-direct-vara.js  test-fixed-program.js  test-full-flow.js  test-new-program.js  test-real-end-to-end.js  test-vara-direct.js
eth-depositor/: .env.example  hardhat.config.js  package-lock.json  package.json
eth-depositor/contracts/: CrossChainDepositor.sol  MockUSDC.sol  RealUSDC.sol
eth-depositor/scripts/: check-balance.js  check-tx-logs.js  deploy.js  get-real-data.js  test-deposit.js  test-real-deposit.js
relayer/: .env.example  package-lock.json  package.json
relayer/src/: config.ts  direct-message.ts  ethereum.ts  force-relay.ts  main.ts  sails-message.ts  test-correct-format.ts  test-exact-format.ts  test-new-program.ts  test-simple-message.ts  test-with-real-data.ts  updated-relayer.ts  vara.ts
staking-receiver/: .binpath  Cargo.toml  build.rs  simple-vara-test.js  test-vara-program.js
staking-receiver/app/: Cargo.toml
staking-receiver/app/src/: lib.rs  lib_fixed.rs  lib_minimal.rs
staking-receiver/client/: Cargo.toml  build.rs
staking-receiver/src/: lib.rs
vara-staking/: Cargo.toml  build.rs  rust-toolchain.toml
vara-staking/src/: lib.rs
