[package]
name = "deposit-receiver-client"
version = "0.1.0"
edition = "2024"

[dependencies]
deposit-receiver-app = { path = "../app", optional = true }
sails-rs = "0.8.1"
mockall = { version = "0.12.1", optional = true }

[build-dependencies]
deposit-receiver-app = { path = "../app" }
sails-client-gen = "0.8.1"
sails-idl-gen = "0.8.1"

[features]
mocks = ["sails-rs/mockall", "dep:mockall"]